tests/ui/associated-types/bogus-constraint-on-bogus-type-param-in-where-clause.stderr
error[E0229]: associated item constraints are not allowed here
  --> $DIR/bogus-constraint-on-bogus-type-param-in-where-clause.rs:7:17
   |
LL |         where T<Bogus = Self::AlsoBogus>: A;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ associated item constraint not allowed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0229`.
